--- a/.gitignore
+++ b/.gitignore
@@ -132,5 +132,5 @@ dmypy.json
 .vscode
 
 # Ne objavi slovarjev na git
-slovarji/*
-!slovarji/.gitkeep 
+nadlogar/slovarji/*
+!nadlogar/slovarji/.gitkeep
